# cuda-image

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md
data/: depth.exr
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/Depth/: CMakeLists.txt  main.cpp
examples/SimpleImage/: CMakeLists.txt  main.cpp
examples/Viewer/: CMakeLists.txt  main.cpp
include/cuimage/: cuda.h  image.h  operations.h
include/cuimage/cuda/: arithmetic.h  conversion.h  depth.h  devptr.h  interpolation.h  kernel.h  type.h  utils.h
include/cuimage/file/: file.h  file_cu.h  reader.h  reader_impl.h  writer.h  writer_impl.h
include/cuimage/image/: base_impl.h  conversion_impl.h  math_impl.h  transform_impl.h  visualization_impl.h
include/cuimage/operations/: conversions_cu.h  math_cu.h  prepare_cu.h  reduce_cu.h  resize_cu.h  transform_cu.h
include/cuimage/visualize/: kernels.h  types.h  visualize.h
include/cuimage/visualize/visualizers/: color_type_impl.h  copy_impl.h  depth_type_impl.h  depth_with_gradients_impl.h  normals_impl.h
libimage/: CMakeLists.txt
libimage/include/image/: cuda.h  image.h  operations.h
libimage/include/image/cuda/: arithmetic.h  conversion.h  devptr.h  interpolation.h  kernel.h  type.h  utils.h
libimage/include/image/file/: file_cu.h  reader.h  reader_impl.h  writer.h
libimage/include/image/image/: base_impl.h  transform_impl.h  visualization_impl.h
libimage/include/image/operations/: conversion_cu.h  conversions_cu.h  math_cu.h  reduce_cu.h  resize_cu.h  transform_cu.h
libimage/include/image/visualize/: kernels.h  types.h  visualize.h
libimage/include/image/visualize/shaders/: ambient.h  default.h
libimage/src/: reader.cpp
libimage/src/cuda/: conversion.cu  kernel.cpp
libimage/src/file/: file.cpp  reader.cpp
libimage/src/operations/: conversions.cu  math.cu  reduce.cu  resize.cu  transform.cu
libimage/src/visualize/: kernels.cu  visualize.cpp
libimage/test/: test_arithmetic.cpp
src/: CMakeLists.txt
src/cuda/: kernel.cpp
src/file/: file.cpp  reader.cpp
src/operations/: conversions.cu  math.cu  prepare.cu  reduce.cu  resize.cu  transform.cu
src/visualize/: generate.cu  visualize.cpp
test/: CMakeLists.txt  test_arithmetic.cpp  test_conversion.cpp  test_devptr.cpp  test_interpolation.cpp  test_resize.cpp  test_type.cpp
tests/: CMakeLists.txt  main.cpp
